Adicionando elementos iniciais

--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <title>Oncotô</title>
 </head>
 <body>
-    <div id="top-banner">
-        <button id="btn-help">
-            <img src="" alt="">
-        </button>
-        <h1>Oncotô</h1>
-        <button id="btn-hint">
-            <img src="" alt="">
-        </button>
-    </div>
+    <main>
+        <div id="top-banner">
+            <button id="btn-help">Regras</button>
+            <h1>Oncotô</h1>
+            <button id="btn-hint">Dica</button>
+        </div>
+        <input type="text" id="txt-country" placeholder="Digite um país">
+        <div id="hint-row">
+            <p class="hint-text">População</p>
+            <p class="hint-text">Área</p>
+            <p class="hint-text">Continente</p>
+        </div>
+    </main>
 </body>
 </html>
