Criando o modelo do modal de regras

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <div id="top-banner">
-            <button id="btn-help">Regras</button>
+            <button id="btn-rules">Regras</button>
             <h1>Oncotô</h1>
             <button id="btn-hint">Dica</button>
         </div>
@@ -20,5 +20,19 @@
             <p class="hint-text">Continente</p>
         </div>
     </main>
+
+    <!-- Modal de Regras -->
+    <div id="rules-modal" class="modal">
+        <div id="modal-content">
+            <span id="close-modal">&times;</span>
+            <h2>Regras do Jogo</h2>
+            <p>O objetivo do jogo é adivinhar o país com base nas dicas que você recebe.</p>
+            <ul>
+                <li>Você pode pedir dicas sobre a população, área ou continente do país.</li>
+                <li>Se errar o chute, o país será adicionado a uma tabela com informações para comparação.</li>
+                <li>Continue tentando até acertar o país!</li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
