Adicionando estrutura da tabela

--- a/index.html
+++ b/index.html
@@ -32,6 +32,24 @@
             </thead>
             <tbody id="country-table">
                 <!-- Country rows will be dynamically added here -->
+                <tr>
+                    <td>Brasil</td>
+                    <td>200.000.000</td>
+                    <td>8.000.000</td>
+                    <td>América do Sul</td>
+                </tr>
+                <tr>
+                    <td>Russia</td>
+                    <td>2.000.000</td>
+                    <td>200.000.000</td>
+                    <td>Europa</td>
+                </tr>
+                <tr>
+                    <td>República Tcheca</td>
+                    <td>200.000</td>
+                    <td>8.000</td>
+                    <td>América do Sul</td>
+                </tr>
             </tbody>
         </table>
     </main>
